# EO-floods

./: .gitignore  README.md  dataset.py  environment.yml  floodmap.py  floodmap_hf.py  package_design.yml  provider.py  pyproject.toml  utils.py
.github/workflows/: tests.yml
EO_Floods/: LICENSE  __init__.py  auth.py  config.py  dataset.py  environment.yml  floodmap.py  floodmap_hf.py  provider.py  utils.py
EO_Floods/EO_Floods/: __init__.py  floodmap_hf.py  utils.py
EO_Floods/EO_Floods/interface/: floodmap.py
EO_Floods/interface/: floodmap.py
EO_Floods/notebooks/: example.ipynb
EO_Floods/providers/: __init__.py  base.py  gfm.py  hydrafloods.py
EO_Floods/providers/GFM/: auth.py  gfm.py  leaflet.py
EO_Floods/providers/hydrafloods/: __init__.py  auth.py  dataset.py  hydrafloods.py
EO_Floods/tests/: conftest.py  test_FloodMapHF.py  test_utils.py
eo_floods/: __init__.py  floodmap.py
eo_floods/providers/: __init__.py  base.py
eo_floods/providers/GFM/: __init__.py  auth.py  gfm.py  leaflet.py
eo_floods/providers/hydrafloods/: __init__.py  auth.py  dataset.py  hydrafloods.py
icesat2/: functions.py  icesat2_date_check.ipynb  icesat2_download.ipynb
icesat2_RGT_dataset/: RGT_line_elements.py  scratch.ipynb  unzip_data.py
icesat2_date_check/: functions.py  requirements.txt
notebooks/: GFM_example.ipynb  example.ipynb  hydrafloods_example.ipynb
tests/: conftest.py  test_FloodMapHF.py  test_HydraFloodsDataset.py  test_floodmap.py  test_gfm.py  test_hydrafloods.py  test_provider.py  test_utils.py
