[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "EO_Floods"
authors = [
    {name = "Tjalling de Jong", email = "tjalling.dejong@deltares.nl"},
    {name = "Arjen Haag", email = "arjen.haag@deltares.nl"}
    ]
dependecies = [
    "hydrafloods",
    "geemap",
    "pydantic",
    "pydantic_settings
    "jupyter",
]

requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GPL-3 License",
    "Programming Language :: Python :: 3"
    ]
dynamic = ["version", "description"]



[project.urls]
Home = "https://github.com/Deltares/EO_Floods"
