[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "EO_Floods"
authors = [
    {name = "Tjalling de jong", email = "tjalling.dejong@deltares.nl"},
    {name = "Arjen Haag", email = "arjen.haag@deltares.nl"}
]
readme = "README.md"
dependecies = [
    "hydrafloods",
    "geemap",
    "jupyter",
    "pytest",
    "pydantic",
]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/Deltares-research/EO-floods"
